roll back without warning"

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -205,7 +205,7 @@ function animate_section(name, style, speedy, show) {
       <TMPL_IF NAME=LOGO_PNG><div id=home_icon><a href="/CoGe" border=0></div><img src='/CoGe/picts/<TMPL_VAR NAME=LOGO_PNG>' border=0></a></TMPL_IF>
      </TD>
      <TD>
-      <font class="title1"><TMPL_VAR NAME=TITLE></font><br><span class=alert>WARNING: THIS IS A DEVELOPMENT SERVER</span><br>Software may not work, system may be down, etc.<br>Please use <a href="http://synteny.berkeley.edu/CoGe"> our production server: synteny.cnr.berkeley.edu/CoGe</a>
+      <font class="title1"><TMPL_VAR NAME=TITLE></font>
      </TD>
     </TR>
    </TABLE>
