--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -2029,7 +2029,7 @@ function clear_org_list()
           <form id=feature_list style="position:static">
           <TMPL_VAR NAME="HSP_RESULTS">
           </form>
-          <table width=900px>
+          <table>
             <tr valign=top>
 				<td align=left>HSP count: <TMPL_VAR NAME=HSP_COUNT>
 
