--- a/web/tmpl/HSPView.tmpl
+++ b/web/tmpl/HSPView.tmpl
@@ -59,9 +59,16 @@
  <tr valign=top>
   <td class=title>Sequence
   <td class=data valign=top><TMPL_VAR NAME=qseq>
-  <a class=small href="CoGeBlast.pl?seq=<TMPL_VAR NAME=qseq_plain>">CoGeBlast</a>
   <td class=data valign=top><TMPL_VAR NAME=sseq>
-  <a class=small href="CoGeBlast.pl?seq=<TMPL_VAR NAME=sseq_plain>">CoGeBlast</a>
+ <tr>
+  <td>Blast Link
+  <td><a class=small href="CoGeBlast.pl?seq=<TMPL_VAR NAME=qseq_plain>">CoGeBlast</a>
+  <td><a class=small href="CoGeBlast.pl?seq=<TMPL_VAR NAME=sseq_plain>">CoGeBlast</a>
+ <tr>
+  <td>SeqView Link
+  <td><TMPL_VAR NAME=qseqview>
+  <td><TMPL_VAR NAME=sseqview>
+  
  <tr valign=top>
   <td class=title>Alignment
   <td colspan = 2 class=data ><TMPL_VAR NAME=align>
