--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -752,7 +752,26 @@ function org_search(){
   if (pageObj.time){
    clearTimeout(pageObj.time);
   }
-   pageObj.time = setTimeout("get_orgs(['args__name','org_name','args__desc','org_desc'], ['org_list']);",500);
+
+  pageObj.time = setTimeout("get_orgs(['args__name','org_name','args__desc','org_desc'], ['org_list']);",500);
+//  get_orgs(['args__name','org_name','args__desc','org_desc'], ['org_list']);
+  setTimeout("seq_type_search()",500);
+}
+
+function seq_type_search() {
+
+ if (ajax.length)
+    {
+     setTimeout("seq_type_search()",500);
+    }
+  else if ($('#org_id').val()) {
+    get_seq_types(['org_id'],['org_seq_types']);
+    $('#add').show(1);
+   }
+  else {
+   $('#org_seq_types').html('');
+   $('#add').hide(0);
+  }
 }
 
 function search_bar(div_id){
@@ -1000,14 +1019,14 @@ function clear_org_list()
    <TABLE class="list" >
        <TR valign=top>
           <TD>
-   	<DIV id="blah">Organism Name: <input type="text" size=11 onFocus="show_add();search_bar('org_name');clear_box('org_desc');restore_search_bar('org_desc');" style="font-style:italic" value="Search" name="org_name" id="org_name" onBlur="restore_search_bar('org_name')" onKeyUp='org_search();'></DIV>
-   	<DIV id="blah">Organism Description: <input type="text" size=11 onFocus="show_add();search_bar('org_desc');clear_box('org_name');restore_search_bar('org_name');" style="font-style:italic" value="Search" name="org_desc" id="org_desc" onBlur="restore_search_bar('org_desc')" onKeyUp='org_search();'></DIV>
+   	<DIV id="blah">Organism Name: <input type="text" size=11 onFocus="search_bar('org_name');clear_box('org_desc');restore_search_bar('org_desc');" style="font-style:italic" value="Search" name="org_name" id="org_name" onBlur="restore_search_bar('org_name')" onKeyUp='org_search();'></DIV>
+   	<DIV id="blah">Organism Description: <input type="text" size=11 onFocus="search_bar('org_desc');clear_box('org_name');restore_search_bar('org_name');" style="font-style:italic" value="Search" name="org_desc" id="org_desc" onBlur="restore_search_bar('org_desc')" onKeyUp='org_search();'></DIV>
    	<DIV id="org_list"><TMPL_VAR NAME="ORG_LIST"></DIV>
    	<DIV id="org_seq_types"><TMPL_VAR NAME="ORG_SEQ_TYPES"></DIV>
    	<input type=button value="Get Org Info" onClick="org_info('<span class=loading>Loading. . .</span>');dataset_description_for_org(['org_id', 'seq_type_id'],[org_info]);pageObj.lastMouseX=event.pageX;pageObj.lastMouseY=event.pageY;">
    	  </TD>
    	  <TD valign="middle" align=middle>
-   	  <input type="button" id=add value="Add &rarr;  " onClick="get_from_id(['org_id', 'seq_type_id'],[add_to_list]);">
+   	  <input type="button" style="display: none" id=add value="Add &rarr;  " onClick="get_from_id(['org_id', 'seq_type_id'],[add_to_list]);">
    	  <input type="button" style="display: none" id=remove value="&larr; Remove" onClick="$('#'+$('#db_choice').val()).remove();counting();">
    	  </TD>
            <TD>
