Fix which buttons were displayed if sequence to be displayed was requested to be the reverse complement.  Dynamic buttons now show DNA sequence instead of Reverse Complement

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -180,6 +180,10 @@ function get_sequence(rc,pro,add){
   rc = myObj.rc || 0;}
   else{
   myObj.rc=rc;}
+  if (rc) {
+    $('#rc_button').hide(0);
+    $('#dna_button').show(0);
+   }	
   var nowrap = myObj.nowrap;
   //alert(rc);
   get_seq(['args__featid', 'args__'+myObj.featid, 'args__pro', 'args__'+pro, 'args__rc', 'args__'+rc, 'args__chr', 'args__'+myObj.chr, 'args__dsid', 'args__'+myObj.dsid, 'args__featname', 'args__'+myObj.featname, 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__'+myObj.start,'args__stop', 'args__'+myObj.stop,'args__add', 'args__'+add, 'args__nowrap','args__'+nowrap],['seq_text']);
