added a replace call for seq to change '__' to '_' in sequence

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -417,6 +417,7 @@ function blastOff(){
   match_score = params.mm;
   gapcost = params.g;
   seq = params.s;
+  seq = seq.replace(/__/g,/_/);
   filter_query = params.fq;
   resultslimit = params.rl;
 //blastz params
